--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue": "^3.3.13",
+    "vue-router": "^4.0.3",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
